[gd_scene load_steps=5 format=2]

[ext_resource path="res://ScreenStretch.tscn" type="PackedScene" id=1]
[ext_resource path="res://essential/default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://essential/FatalError.gd" type="Script" id=3]
[ext_resource path="res://essential/default_font_b.tres" type="DynamicFont" id=4]

[node name="Error" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.533333, 0, 0, 1 )
script = ExtResource( 3 )

[node name="ScreenStretch" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="ScreenStretch"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -608.0
margin_top = -328.0
margin_right = 608.0
margin_bottom = 328.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenStretch/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Label" type="Label" parent="ScreenStretch/ColorRect/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 4 )
text = "Fatal error"
align = 1
valign = 1

[node name="Reason" type="Label" parent="ScreenStretch/ColorRect/VBoxContainer"]
margin_top = 33.0
margin_right = 1200.0
margin_bottom = 62.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="Footer" type="RichTextLabel" parent="ScreenStretch/ColorRect/VBoxContainer"]
margin_top = 508.0
margin_right = 1200.0
margin_bottom = 568.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "If this issue persists, please report the error to [url=https://github.com/JapanYoshi/salty/issues]the GitHub repo[/url] (github.com/japanyoshi/salty/issues) or [url=https://discord.gg/Mp89KdZ75N]the official Discord server[/url] (discord.gg/Mp89KdZ75N), and include the above error message."
text = "If this issue persists, please report the error to the GitHub repo (github.com/japanyoshi/salty/issues) or the official Discord server (discord.gg/Mp89KdZ75N), and include the above error message."
fit_content_height = true

[node name="BuildCode" type="Label" parent="ScreenStretch/ColorRect/VBoxContainer"]
margin_top = 572.0
margin_right = 1200.0
margin_bottom = 601.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="Button" type="Button" parent="ScreenStretch/ColorRect/VBoxContainer"]
margin_top = 605.0
margin_right = 1200.0
margin_bottom = 640.0
custom_fonts/font = ExtResource( 4 )
text = "Return to title"

[connection signal="meta_clicked" from="ScreenStretch/ColorRect/VBoxContainer/Footer" to="." method="_on_Footer_meta_clicked"]
[connection signal="pressed" from="ScreenStretch/ColorRect/VBoxContainer/Button" to="." method="_on_Button_pressed"]
